# Doof

./: .gitignore  README.md  pyproject.toml
doof/: __main__.py  console.py  helpers.py  logging.py  model.py  parsing.py  rendering.py  serve.py
tests/: test_doof.py
