[tool.poetry]
name = "Doof"
version = "0.1.0"
description = "A static site generator for opinated people"
authors = ["Louis Desportes <louis@akkes.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"
commonmark = "^0.9.1"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
rope = "^0.17.0"

[tool.poetry.scripts]
doof = 'doof.console:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
